removed my daemons from rc.conf

--- a/etc/runit/rc/rc.conf
+++ b/etc/runit/rc/rc.conf
@@ -12,4 +12,4 @@ USELVM="yes"
 #   - prefix a daemon with a ! to disable it
 #   - prefix a daemon with a @ to start it up in the background
 #
-DAEMONS=(cpufreq alsa)
+DAEMONS=()
